# shared-ssm-dox

./: .cfnlintrc  .editorconfig  .pre-commit-config.yaml  Makefile  README.md  ScriptAnalyzerSettings.psd1  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  setup.cfg
.github/: release-drafter.yml
.github/workflows/: cfn-lint.yml  lint.yml  local-tests.yml  pre-commit.yml
dox/: README.md
dox/configuration/: README.md
dox/configuration/AWSTimeSync/: README.md  install.ps1  install.sh  template.yml
dox/configuration/InstallCodeDeploy/: README.md  install.ps1  install.sh  template.yml
dox/configuration/InstallPackages/: README.md  install_packages.sh  template.yml
dox/diagnostics/: README.md
dox/diagnostics/EC2CpuScan/: README.md  cpu_scan.ps1  cpu_scan.sh  template.yml
dox/diagnostics/EC2DiskScan/: README.md  disk_scan.ps1  disk_scan.sh  template.yml
dox/diagnostics/EC2MemoryScan/: README.md  memory_scan.ps1  memory_scan.sh  template.yml
infrastructure/: 01-public-bucket.yml  runway.yml
infrastructure/templates/: s3_bucket_public.yml
shared_ssm_docs/configuration/: AWSTimeSync.json  InstallCodeDeploy.json  InstallPackages.json
shared_ssm_docs/diagnostics/: EC2CpuScan.json  EC2DiskScan.json  EC2MemoryScan.json
ssm_dox_builder/: __init__.py  _logging.py  constants.py  document.py  dox.py  exceptions.py  finder.py  mixins.py
ssm_dox_builder/_cli/: logs.py  main.py
ssm_dox_builder/_cli/commands/: __init__.py  _publish.py
ssm_dox_builder/models/: base.py  document.py  parameter.py
ssm_dox_builder/models/main_steps/: aws_runpowershellscript.py  aws_runshellscript.py  base.py
tests/: conftest.py
tests/integration/cli/commands/: test_build.py  test_check.py  test_publish.py
tests/unit/: conftest.py  test_document.py  test_dox.py  test_finder.py  test_mixins.py
tests/unit/fixtures/documents/: ExampleLinux.json  ExampleWindows.json
tests/unit/models/: test_base.py  test_document.py  test_parameter.py
tests/unit/models/main_steps/: test_aws_runpowershellscript.py  test_aws_runshellscript.py  test_base.py
