[tool.poetry]
name = "shared-ssm-dox"
version = "0.0.0"
description = "A repository of shared SSM documents"
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"
packages = [
  { include = "ssm_dox_builder" }
]
include = [
  "ssm_dox_builder/data/*"
]

[tool.poetry.dependencies]
python = "^3.8"

click = "^7.1.2"
pydantic = "^1.8"
PyYAML = ">=4.1,<5.3"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
awscli = "^1.19.15"  # defined to improve runway dependency resolution speed
black = "^20.8b1"
cfn-lint = "^0.46.0"
cryptography = "<3.4"  # breaking change requiring rust
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
isort = "^5.7.0"
pep8-naming = "^0.11.1"
pre-commit = "^2.10.1"
pydocstyle = "^5.1.1"
runway = "^1.18.3"

[tool.poetry.scripts]
ssm-dox = "ssm_dox_builder._cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = '''
/(
    _build
  | \.eggs
  | \.git
  | \.mypy_cache
  | \.runway_cache
  | \.runway
  | \.venv
  | build
  | dist
  | node_modules
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py38']


[tool.isort]
profile = "black"
skip = [
  "_build",
  ".eggs",
  ".git",
  ".mypy_cache",
  ".runway_cache",
  ".runway",
  ".venv",
  "build",
  "dist",
  "node_modules",
]
