[tool.poetry]
name = "shared-ssm-dox"
version = "0.0.0"
description = "A repository of shared SSM documents"
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
awscli = "^1.19.15"  # defined to improve runway dependency resolution speed
cryptography = "<3.4"  # breaking change requiring rust
pre-commit = "^2.11.0"
runway = "^1.18.3"
ssm-dox = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
